Fix horizontal scroll on mobile

--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -147,6 +147,7 @@ h3 {
 }
 
 .widget {
+  overflow: hidden;
   text-align: center;
 }
 
